Cancelling the File browser after having cancelled the render view shows the render view #71590

Closed
opened 2019-11-14 23:39:53 +01:00 by Dalai Felinto · 7 comments

System Information
Operating system: Linux-5.3.0-23-generic-x86_64-with-Ubuntu-19.10-eoan 64 Bits

Blender Version
Broken: version: 2.81 HEAD c25a910e4e
Worked: 2.80

Short description of error
Cancelling the file browser makes the render view window to show if it was cancelled also.

Exact steps for others to reproduce the error

  • Render → View Render
  • Esc (with mouse over the view render window)
  • File → Open
  • Esc (with mouse over the file browser window)

It now shows the view render window (where it was supposed to close all the temporary windows.

**System Information** Operating system: Linux-5.3.0-23-generic-x86_64-with-Ubuntu-19.10-eoan 64 Bits **Blender Version** Broken: version: 2.81 HEAD c25a910e4ec0 Worked: 2.80 **Short description of error** Cancelling the file browser makes the render view window to show if it was cancelled also. **Exact steps for others to reproduce the error** * Render → View Render * Esc (with mouse over the view render window) * File → Open * Esc (with mouse over the file browser window) It now shows the view render window (where it was supposed to close all the temporary windows.
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Author
Owner

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Author
Owner

Confirmed on Windows too by deadpin on blender.chat.

Confirmed on Windows too by deadpin on blender.chat.

This issue was referenced by 96ce32dca6

This issue was referenced by 96ce32dca6ab92ac9fbd807fd50525cc5e50c636
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Julian Eisel self-assigned this 2019-11-15 00:26:37 +01:00
Author
Owner

@JulianEisel why not to commit this to 2.81? This + D6260, D6259 == good file browser dialog in 2.81 ;)

@JulianEisel why not to commit this to 2.81? This + [D6260](https://archive.blender.org/developer/D6260), [D6259](https://archive.blender.org/developer/D6259) == good file browser dialog in 2.81 ;)
Member

Answered in 96ce32dca6.

Answered in 96ce32dca6.
Thomas Dinges added this to the 2.81 milestone 2023-02-08 16:46:55 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#71590
No description provided.